# shotHDR

./: .gitignore  .gitmodules  .metadata  README.md  flutter_rust_bridge.yaml  pubspec.yaml
lib/: main.dart
lib/common/rust/: frb_generated.dart  frb_generated.io.dart
lib/common/rust/api/: screen_shot_api.dart  simple.dart  types.dart
lib/common/rust/screenshot/: types.dart  types.freezed.dart
lib/widgets/: screenshot_overlay.dart  shortcut_binding_screen.dart  widgets.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements
macos/Runner.xcodeproj/: project.pbxproj  project.pbxproj.bak
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig  Debug.xcconfig  Release.xcconfig
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.io.rs  frb_generated.rs  lib.rs
rust/src/api/: mod.rs  screen_shot_api.rs
rust/src/colorist/: mod.rs
rust/src/screenshot/: fallback.rs  linux.rs  macos.rs  mod.rs  windows.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_shot_hdr.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_shot_hdr.podspec
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
