[package]
name = "rust_lib_shot_hdr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

# Suppress frb_expand warning from flutter_rust_bridge macro
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(frb_expand)"] }

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0"
half = "2"
glam = "0"

# Ultra HDR JPEG encoding (cross-platform)
ultrahdr = { version = "0.1", features = ["vendored"] }
image = "0.24"

# Windows specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1.5.0"
windows = { version = "0.61", features = [
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

# macOS specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
# Enable macos_15_0 feature for HDR capture support (SCCaptureDynamicRange)
screencapturekit = { version = "1.5.0", features = ["macos_15_0"] }
core-graphics = "0.23"

# Linux specific dependencies (placeholder)
[target.'cfg(target_os = "linux")'.dependencies]
# TODO: add pipewire or xdg-desktop-portal integration
